# Agentic-RAG

./: README.md  pyproject.toml
src/agents_src/: check_crew.py
src/agents_src/tools/: rag_qa_tool.py
src/backend_src/: main.py
src/backend_src/api/: chat.py
src/backend_src/services/: chat.py
src/core/: config.py
src/frontend_src/: app.py
src/rag_doc_ingestion/: ingest_docs.py
